fix: take scrollbar dimensions into account for layout
fix https://github.com/Xiphe/budgetbudget/issues/76
fix https://github.com/Xiphe/budgetbudget/issues/74

--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -1,7 +1,6 @@
 .content {
   margin-top: var(--header-height);
   height: calc(100vh - var(--header-height));
-  overflow: scroll;
 }
 .padding {
   padding: 0 2rem;
